--- a/example.conf
+++ b/example.conf
@@ -1,3 +1,3 @@
-This might be my first command#This 
+"This might be my first command#This 
 might be my second and this might be#my 
-third
+third"
