reworked some bits since jnxlibc update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ project(satellite)
 
 add_executable(satellite src/main.c src/data_translation.c src/executor.c)
 set(BUILD_TYPE Debug)
-target_link_libraries(satellite -ljnxc -ldl)
+target_link_libraries(satellite -ljnxc -lmysqlclient -ldl)
 add_subdirectory(src)
 add_subdirectory(conf)
