--- a/conf/example.conf
+++ b/conf/example.conf
@@ -1,3 +1,3 @@
-"This might be my first command#This 
-might be my second and this might be#my 
-third"
+instruction one
+instruction two
+instruction three
