so far so good, now to work on the bus error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(satellite)
 
-add_executable(satellite src/main.c src/data_translation.c src/executor.c src/jnxnetwork.c src/jnxlist.c)
+add_executable(satellite src/main.c src/data_translation.c src/executor.c)
 set(BUILD_TYPE Debug)
-target_link_libraries(satellite -lmysqlclient -ldl)
+target_link_libraries(satellite -ljnxc -lmysqlclient -ldl)
 add_subdirectory(src)
 add_subdirectory(conf)
