--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(satellite)
 
-add_executable(satellite src/main.c src/data_translation.c src/executor.c)
+add_executable(satellite src/main.c  src/executor.c)
 set(BUILD_TYPE Debug)
 target_link_libraries(satellite -ljnxc -lmysqlclient -ldl)
 add_subdirectory(src)
