--- a/conf/example.conf
+++ b/conf/example.conf
@@ -1,3 +1,8 @@
-ls -la
-pwd
-netstat -s
+echo 'hello'
+echo 'hello'
+echo 'hello'
+echo 'hello'
+echo 'hello'
+echo 'hello'
+echo 'hello'
+echo 'hello'
