simplified to take raw shell input

--- a/conf/example.conf
+++ b/conf/example.conf
@@ -1,8 +1,6 @@
-echo 'hello'
-echo 'hello'
-echo 'hello'
-echo 'hello'
-echo 'hello'
-echo 'hello'
-echo 'hello'
-echo 'hello'
+pwd;
+ls -la;
+echo 'This is an example of a file with alot of shell instructions';
+mkdir -p temp;
+cd temp;
+pwd;
