--- a/conf/example.conf
+++ b/conf/example.conf
@@ -1,6 +1,10 @@
-pwd;
-ls -la;
-echo 'This is an example of a file with alot of shell instructions';
-mkdir -p temp;
+echo 'Welcome to the example';
+mkdir -p temp; 
 cd temp;
 pwd;
+git clone git@github.com:AlexsJones/Hudson-Integration.git .;
+xcodebuild -target hudsoniPhoneExample-cal -sdk iphonesimulator6.0;
+APP_BUNDLE_PATH=build/Release-iphonesimulator/hudsoniPhoneExample-cal.app cucumber;
+
+cd ../;
+rm -rf temp;
