building in job identification

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 project(satellite)
 
-add_executable(satellite src/main.c)
+add_executable(satellite src/main.c src/responder.c src/jnxsql_interface.c)
 set(BUILD_TYPE Debug)
 target_link_libraries(satellite -ljnxc -lmysqlclient -ldl)
 add_subdirectory(src)
 add_subdirectory(conf)
+
+
+INSTALL(PROGRAMS build/satellite DESTINATION bin)
