--- a/conf/example.conf
+++ b/conf/example.conf
@@ -3,6 +3,6 @@ cd temp;
 pwd;
 git clone git@github.com:AlexsJones/Hudson-Integration.git .;
 xcodebuild -target hudsoniPhoneExample-cal -sdk iphonesimulator6.0;
-APP_BUNDLE_PATH=build/Release-iphonesimulator/hudsoniPhoneExample-cal.app cucumber;
+APP_BUNDLE_PATH=build/Release-iphonesimulator/hudsoniPhoneExample-cal.app cucumber -f junit -o test-reports -f html -o test-reports/cuke.html;
 cd ../;
 rm -rf temp;
