hopefully added some better capturing of jobless id's

--- a/conf/example.conf
+++ b/conf/example.conf
@@ -4,7 +4,6 @@ pwd;
 git clone git@github.com:AlexsJones/Hudson-Integration.git .;
 xcodebuild -target hudsoniPhoneExample-cal -sdk iphonesimulator6.0;
 APP_BUNDLE_PATH=build/Release-iphonesimulator/hudsoniPhoneExample-cal.app cucumber -f junit -o test-reports -f html -o test-reports/cuke.html;
-curl -v --location --upload-file test-reports/cuke.html http://172.20.141.89:8091/upload/hudsoniPhoneExample/
+curl -v --location --upload-file test-reports/cuke.html http://$SERVER/upload/hudsoniPhoneExample/
 cd ../;
 rm -rf temp;
-
