removed some garbage out of default conf

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -4,4 +4,4 @@
 *listenport*
 *logpath*
 *frontendserver*
-*frontendport			echo "frontendport=$frontendport" >> conf/satellite.conf*
+*frontendport*
